[gd_scene load_steps=4 format=3 uid="uid://b2fkyte1jfbu1"]

[ext_resource type="Script" path="res://Scenes/Weapons/Shuriken.gd" id="1_hwqa8"]
[ext_resource type="Texture2D" uid="uid://c0chxsiq6dorr" path="res://Assets/Weapons and Armor/Weapons2.png" id="2_crayr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e5akj"]
radius = 16.6667

[node name="Projectile" type="Area2D" groups=["projectile"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.3, 0.3)
collision_layer = 32
collision_mask = 7
script = ExtResource("1_hwqa8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e5akj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_crayr")
region_enabled = true
region_rect = Rect2(4.96429, 522.277, 53.5905, 43.952)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(1.6, 1.6)

[node name="ShurikenTimeout" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="." to="." method="EnemyHit"]
[connection signal="body_entered" from="." to="." method="TileMapEntered"]
[connection signal="body_entered" from="." to="." method="EnemyHit"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="ShurikenLeftScreen"]
[connection signal="timeout" from="ShurikenTimeout" to="." method="ShurikenTimeout"]
